tests/chapter_8/invalid_semantics/extra_credit/labeled_break_outside_loop.c
int main(void) {
    label: break;
    return 0;
}